Opened 18 years ago

Closed 16 years ago

#333 closed bug (fixed)

[Cortex] moving bottom dragger draws white space

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1
Component: Kits/Application Kit Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by jackburton)

Moving bottom dragger in the horizontal scrollbar draws white space. Screenshot will folow. Tested with rev16843 under vmware.

Attachments (2)

cortex.PNG (6.0 KB ) - added by diver 18 years ago.
dragger and white space
cortex.2.PNG (27.9 KB ) - added by diver 18 years ago.
It's still there

Download all attachments as: .zip

Change History (11)

by diver, 18 years ago

Attachment: cortex.PNG added

dragger and white space

comment:1 by axeld, 18 years ago

Owner: changed from bpmagic@… to darkwyrm

comment:2 by diver, 18 years ago

Owner: changed from darkwyrm to stippi

comment:3 by jackburton, 18 years ago

Seems to be fixed already. Can you confirm ?

by diver, 18 years ago

Attachment: cortex.2.PNG added

It's still there

comment:4 by jackburton, 17 years ago

Description: modified (diff)
Platform: All

Tested with hrev21444. The dragger doesnt' draw white space anymore, but looks like that part is not invalidated correctly. Parts of the "knob" are left behind if you resize the dragger.

comment:5 by diver, 17 years ago

Component: - GeneralKits/Application Kit

Are you sure about that, because i didn't manage to find a 100% reproducible way, it's just happened sometimes, not that i tested this bug in this year, as I'm stuck with installing vmware-server on my Ubuntu machine.

comment:6 by stippi, 17 years ago

I have fixed the broken status view invalidation in hrev22019, but the scrollbar moving/resizing doesn't work sometimes. It is not 100% reproducible, which makes this bug a bit weird. I have no good ideas yet, in which direction to look for the error.

comment:7 by aldeck, 16 years ago

Can't reproduce on hrev23670 / vmware. Tested scrollbars, dragger/knob and window resize intensively for 5 mins. Seems solid.

comment:8 by aldeck, 16 years ago

Hmm, ok, i just managed to reproduce it. I didn't find a reproductible case though.

comment:9 by aldeck, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev25930

Note: See TracTickets for help on using tickets.